--- a/css/main.css
+++ b/css/main.css
@@ -39,15 +39,15 @@ body {
 }
 
 .page-header .button:hover {
-  background: #462810;
-  color: #ffffff;
+  border-color: #ff8c1a;
+  color: #ff8c1a;
 }
 
-.about {
+.text-sec {
   margin: 0;
 }
 
-.about h2 {
+.text-sec h2 {
   text-align: left;
   margin: 0;
   font-size: 40px;
@@ -56,19 +56,23 @@ body {
 .flex-row-reversed {
   display: flex;
   flex-direction: row-reverse;
-  
 }
 
-.about article p {
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.text-sec article p {
   font-size: 28px;
 }
 
-.about img {
+.text-sec img {
   height: 100%;
   width: 50%;
 }
 
-.about .offer {
+.text-sec article {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -166,8 +170,8 @@ body {
 }
 
 .services article svg {
-  width: 150px;
-  height: 150px;
+  width: 90px;
+  height: 90px;
 }
 
 .services svg path {
@@ -182,8 +186,8 @@ body {
 }
 
 .services figcaption {
-  padding-top: 30px;
-  font-size: 30px;
+  padding: 30px 0;
+  font-size: 25px;
   font-weight: 700;
 }
 
@@ -194,6 +198,7 @@ body {
   padding: 20px 0;
 
 }
+
 
 .contact figure {
   display: flex;
@@ -211,40 +216,57 @@ body {
 }
 
 .contact article svg {
-  width: 80px;
-  height: 80px;
+  width: 50px;
+  height: 50px;
 }
 
 .contact article svg path {
-  fill: #ff8c1a;
+  fill: #ffffff;
 }
 
 .contact {
-  background: url('../img/header-bg.jpeg') 100% no-repeat;
+  /* background: url('../img/header-bg.jpeg') 100% no-repeat;
   position: relative;
   z-index: 1;
   background-size:cover;
-  background-position: bottom;
-  color: #ffffff;
+  background-position: bottom; */
+  background: #2e2e2e;
+  color: #b4b3b6;
 }
 
-.contact:before{
+/* .contact:before{
   display: block;
   position: absolute;
   content: "";
-  /* background: rgba(22, 22, 22, 0.7); */
+  background: rgba(22, 22, 22, 0.7);
   background: rgba(0, 0, 0, 0.6);
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: -1;
-}
+} */
 
 .contact figcaption {
-  padding: 30px 20px;
-  font-size: 30px;
+  padding: 10px 20px;
+  font-size: 20px;
   font-weight: 700;
 }
 
+.page-footer {
+  background: #e9e9e9;
+  background-position: bottom;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
 
+.page-footer a{
+  padding: 10px 10px;
+}
+
+.page-footer p {
+  padding: 0 20px 0 30px;
+  font-size: 25px;
+}
