--- a/css/main.css
+++ b/css/main.css
@@ -253,6 +253,88 @@ body {
   font-weight: 700;
 }
 
+.sign-up {
+  background: #2e2e2e;
+  color: #ffffff;
+  font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.sign-up h2 {
+  padding: 15px 15px;
+  background: #b3641a;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.sign-up div {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  text-align: left;
+}
+
+.sign-up input, .sign-up textarea {
+  border-radius: 10px;
+ 
+  border: 0px;
+  height: 40px;
+  width: 400px;
+  background: #58575a;
+  font-size: 20px;
+  padding: 5px;
+  color: #ffffff;
+  box-shadow: none;
+}
+
+.sign-up input::-moz-placeholder, .sign-up textarea::-moz-placeholder {
+  color: #e9e9e9;
+}
+
+.sign-up input::-webkit-input-placeholder, .sign-up textarea::-webkit-input-placeholder {
+  color: #e9e9e9;
+ }
+
+ .sign-up input::placeholder, .sign-up textarea::placeholder {
+   color: #e9e9e9;
+ }
+
+ .sign-up input:focus, .sign-up textarea:focus {
+   background: #6e6d70;
+   
+   outline: none;
+ }
+
+.sign-up label {
+  visibility: hidden;
+}
+
+.sign-up textarea {
+  height: 140px;
+  width: 400px;
+}
+
+.sign-up button {
+  margin: 15px 0;
+  text-decoration: none;
+  font-style: 18px;
+  color: #462810;
+  border: #462810 2px solid;
+  padding: 10px 20px;
+  border-radius: 10px;
+  outline: none;
+  cursor: pointer;
+}
+
+.sign-up button:active {
+  position: relative;
+  top: 2px;
+  left: 2px;
+}
+
 .page-footer {
   background: #e9e9e9;
   background-position: bottom;
