--- a/css/main.css
+++ b/css/main.css
@@ -56,11 +56,13 @@ body {
 .flex-row-reversed {
   display: flex;
   flex-direction: row-reverse;
+  height: 600px;
 }
 
 .flex-row {
   display: flex;
   flex-direction: row;
+  height: 600px;
 }
 
 .text-sec article p {
@@ -70,13 +72,20 @@ body {
 .text-sec img {
   height: 100%;
   width: 50%;
+  flex-basis: 0;
+  flex-grow: 1;
 }
+
 
 .text-sec article {
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 0 20px;
+  flex-grow: 1;
+  flex-basis: 0;
+  width: 50%;
+  height: 100%;
 }
 
 .tech {
@@ -351,4 +360,19 @@ body {
 .page-footer p {
   padding: 0 20px 0 30px;
   font-size: 25px;
+}
+
+@media (max-width: 1480px) {
+  .contact article {
+    padding: 0 50px;
+}
+
+.services article {
+  padding: 0;
+}
+
+@media (max-width: 1480px) {
+.services article {
+  margin: 0 10px;
+}
 }
