--- a/css/main.css
+++ b/css/main.css
@@ -277,6 +277,7 @@ body {
   background: #b3641a;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  margin: 0;
 }
 
 .sign-up div {
@@ -362,7 +363,7 @@ body {
   font-size: 25px;
 }
 
-@media (max-width: 1480px) {
+@media (max-width: 1500px) {
   .contact article {
     padding: 0 50px;
 }
@@ -371,8 +372,97 @@ body {
   padding: 0;
 }
 
+.tech figure {
+  
+  width: 40%;
+}
+
+@media (max-width: 1320px) {
+  .text-sec article p {
+    padding: 0 20px 20px 20px;;
+    font-size: 22px;
+  }
+
+  .text-sec h2 {
+    margin: 12px;
+  }
+
 @media (max-width: 1480px) {
 .services article {
   margin: 0 10px;
 }
+
+.services h2 {
+  margin-left: 0;
+}
+}
+
+
+
+@media (max-width: 1070px) {
+  .contact figure {
+    width: 100%;
+  }
+
+  .contact figcaption {
+    font-size: 30px;
+  }
+
+  .contact .email {
+    margin-left: 140px;
+  }
+
+  .contact .address {
+    margin-left: 60px;
+  }
+}
+
+@media (max-width: 1150px) {
+  .services article {
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
+
+
+@media (max-width: 976px) {
+  .tech article {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 920px) {
+  .text-sec img {
+    display: none;
+  }
+}
+
+@media (max-width: 670px) {
+  .contact figcaption {
+    font-size: 20px;
+  }
+
+  .contact figure {
+    margin-left: 0;
+  }
+
+  .contact article {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .contact .email {
+    margin-right: 120px;
+  }
+
+  .contact .address {
+    margin-right: 90px;
+  }
+}
+
+@media (max-width: 450px) {
+  .text-sec h2 {
+    font-size: 30px;
+  }
 }
